--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,11 +20,10 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.email %></td>
-        <td><%= user.created_at %></td>
-        <td><%= user.updated_at %></td>
+        <td><%= user.created_at.strftime("%m/%d/%Y %I:%M%p") %></td>
+        <td><%= user.updated_at.strftime("%m/%d/%Y %I:%M%p") %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
